--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -28,7 +28,7 @@
       "links": [
         {
           "name": "Source Code",
-          "href": "https://github.com/ParthGorde/EchoAI",
+          "href": "https://github.com/ParthGorde/echo.ai",
           "icon": "github"
         },
         {
